# hrapp-backend

./: .env.example  Dockerfile  compose.yaml  pyproject.toml
server/: actions.py  auth.py  companies.py  database.py  departments.py  employees.py  main.py  models.py  settings.py
server/alembic/: env.py
server/alembic/versions/: 0976f21b55f4_init.py  0a0849e34749_init.py  3cda4289bcde_change_actions.py
server/api/: dependenicies.py
server/api/routers/: actions.py  auth.py  companies.py  departments.py  employees.py  reports.py
server/database/: database.py  models.py
server/model/: action.py  company.py  department.py  employee.py
server/model/auth/: access_token.py  refresh_token.py  user.py
server/repo/: actions_repository.py  actions_repository_impl.py  companies_repository.py  companies_repository_impl.py  departments_repository.py  departments_repository_impl.py  employees_repository.py  employees_repository_impl.py
server/repo/auth/: access_token_repository.py  access_token_repository_impl.py  refresh_token_repository.py  refresh_token_repository_impl.py  user_repository.py  (+1 more)
server/routers/: actions.py  auth.py  companies.py  departments.py  employees.py  reports.py
server/schemas/: actions.py  auth.py  companies.py  departments.py  employees.py
server/services/: actions_service.py  actions_service_impl.py  companies_service.py  companies_service_impl.py  convert_actions_to_schemas.py  departments_service.py  departments_service_impl.py  employees_service.py  employees_service_impl.py  reports_service.py  reports_service_impl.py
(+2 files in other folders)
