[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["witelokk <witelokk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
jwt = "^1.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
